syntax = "proto3";

option go_package = "github.com/leighmacdonald/mika/rpc";

import "proto/common.proto";

package mika;

message InfoHashParam {
  bytes info_hash = 1;
}

message Torrent {
  int64 torrent_id = 1;
  bytes info_hash = 2;
  string name = 3;
  int32 seeders = 4;
  int32 leechers = 5;
  TimeMeta time = 6;
}

message TorrentParams {
  int64 torrentID = 1;
}

message TorrentAddParams {
  string name = 1;
  bytes info_hash = 2;
  double multi_up = 3;
  double multi_dn = 4;
}

message TorrentUpdateParams {
  string name = 1;
  bool deleted = 2;
  bool enabled = 3;
  string reason = 4;
  string multi_up = 5;
  string multi_dn = 6;
}
